Alpha 4.0.2 - 26th October 2020

- Tiny fix for a crash due to programming error in the previous update

Alpha 4.0.1 - 25th October 2020

- Adjusted starting seed amounts (barley and hops) so beer will last longer into the next wave of immigrants
- Corrected crash caused by translated special string in French translation
- Fixed a pathfinding bug where workspaces could be open but not path-found to, so job workspaces are now tried in a random order
- Added missing beer tapper state descriptions

Alpha 4 - 19th October 2020

- Brewing beer is here! Includes new "brewer" profession and brewery room type with plenty of new furniture and items
- Liquid containers such as buckets are now used correctly if they already contain a liquid i.e. will be used to fill barrels, or ignored otherwise
- The types and quantity of seeds on game start are now fixed rather than random
- Constructions no longer lock material types until all are available
- Fixed the Linux distribution - apologies this has been broken a while - with many thanks to community member gammelget / @falkowich
- Fix for mining jobs getting stuck as inaccessible when in newly-discovered caverns
- Fixed an issue where status effects were not persisted between saves

Alpha 3.6.5 - 5th July 2020

- Fixed issues with failing to drink - drinking from water barrels now respects the available amount of water within
- Changed bucket production quota from a fixed amount of 6 to 1 for every 5 settlers
- Fixed an issue where items would become stuck as assigned when a crafting station was inaccessible
- Disabled sounds when placing items down
- Item types now define the sound asset used when they are eaten/consumed, so now rations no longer have an associated sound

Alpha 3.6.4 - 3rd July 2020

- Improved checking of inaccessible jobs, fixes an issue where once-inaccessible jobs would sometimes get stuck as inaccessible forever