@@ -1,3 +1,7 @@
+Alpha 4.0.3 - 1st November 2020
+
+- Fix for a crash that can occur when a beer tapper contains an item without liquid inside it
+
 Alpha 4.0.2 - 26th October 2020
 
 - Tiny fix for a crash due to programming error in the previous update
